log

Thu 17 Aug 2023 07:57:46 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
6281999
Thu 17 Aug 2023 08:01:10 PM UTC: 
 exercises.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:3: error: ‘aux’ undeclared (first use in this function)
   34 |   aux=arr;
      |   ^~~
exercises.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:35:8: error: ‘largo’ undeclared (first use in this function)
   35 |   size=largo;
      |        ^~~~~
Compilation failed
f3e6839
Thu 17 Aug 2023 08:01:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:3: error: ‘aux’ undeclared (first use in this function)
   34 |   aux=arr;
      |   ^~~
exercises.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:35:3: error: ‘largo’ undeclared (first use in this function)
   35 |   largo=size;
      |   ^~~~~
Compilation failed
d3fae9f
Thu 17 Aug 2023 08:02:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:3: error: ‘aux’ undeclared (first use in this function)
   34 |   aux=arr;
      |   ^~~
exercises.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:35:3: error: ‘largo’ undeclared (first use in this function)
   35 |   largo=size;
      |   ^~~~~
Compilation failed
b211ccb
Thu 17 Aug 2023 08:02:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:3: error: ‘aux’ undeclared (first use in this function)
   34 |   aux=arr;
      |   ^~~
exercises.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c72c2ef
Thu 17 Aug 2023 08:02:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:11: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   34 |   int aux=arr;
      |           ^~~
exercises.c:38:8: error: subscripted value is neither array nor pointer nor vector
   38 |     aux[i]=arr[largo];
      |        ^
exercises.c:34:7: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   34 |   int aux=arr;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
b72682e
Thu 17 Aug 2023 08:04:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:7: error: array size missing in ‘aux’
   34 |   int aux[];
      |       ^~~
exercises.c:34:7: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
cc1: all warnings being treated as errors
Compilation failed
a256c36
Thu 17 Aug 2023 08:04:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:7: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   34 |   int aux[size];
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
0a56530
Thu 17 Aug 2023 08:05:53 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:7: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   34 |   int aux[size];
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
176fd84
Thu 17 Aug 2023 08:06:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:7: error: array size missing in ‘aux’
   34 |   int aux[];
      |       ^~~
exercises.c:34:7: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
cc1: all warnings being treated as errors
Compilation failed
2e3880e
Thu 17 Aug 2023 08:10:56 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:7: error: array size missing in ‘auxArr’
   34 |   int auxArr[];
      |       ^~~~~~
exercises.c:34:7: error: variable ‘auxArr’ set but not used [-Werror=unused-but-set-variable]
cc1: all warnings being treated as errors
Compilation failed
fdecbcf
Thu 17 Aug 2023 08:11:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:7: error: array size missing in ‘auxArr’
   34 |   int auxArr[];
      |       ^~~~~~
exercises.c:34:7: error: variable ‘auxArr’ set but not used [-Werror=unused-but-set-variable]
cc1: all warnings being treated as errors
Compilation failed
15f8ad0
Thu 17 Aug 2023 08:12:28 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:11: error: subscripted value is neither array nor pointer nor vector
   38 |     auxArr[i]=arr[largo];
      |           ^
exercises.c:34:7: error: variable ‘auxArr’ set but not used [-Werror=unused-but-set-variable]
   34 |   int auxArr=arr[size];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
068fa89
Thu 17 Aug 2023 08:13:52 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:11: error: subscripted value is neither array nor pointer nor vector
   38 |     auxArr[i]=arr[largo];
      |           ^
exercises.c:41:7: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |    arr=auxArr;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
40ee778
Thu 17 Aug 2023 08:19:02 PM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  0|6
total_score: 10/70
ae40049
Thu 17 Aug 2023 08:20:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
ad25506
Thu 17 Aug 2023 08:20:29 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
ea6d764
Thu 17 Aug 2023 08:20:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
5c0545b
Thu 17 Aug 2023 08:29:45 PM UTC: 
 exercises.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:61:3: error: expected ‘;’ before ‘}’ token
   61 |   }
      |   ^
exercises.c:67:7: error: ‘largo’ undeclared (first use in this function)
   67 |       largo++;
      |       ^~~~~
exercises.c:67:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
26c2527
Thu 17 Aug 2023 08:29:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:61:3: error: expected ‘;’ before ‘}’ token
   61 |   }
      |   ^
Compilation failed
72bc08f
